--- a/Signal/translations/he.lproj/PluralAware.stringsdict
+++ b/Signal/translations/he.lproj/PluralAware.stringsdict
@@ -1872,6 +1872,46 @@
 			<string>&lt;bold&gt;%1$d&lt;/bold&gt; צפיות</string>
 		</dict>
 	</dict>
+	<key>THREAD_DETAILS_MORE_MUTUAL_GROUP_%3$ld</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>Member of %1$@, %2$@, and %3$ld additional group</string>
+			<key>two</key>
+			<string>Member of %1$@, %2$@, and %3$ld additional groups</string>
+			<key>many</key>
+			<string>Member of %1$@, %2$@, and %3$ld additional groups</string>
+			<key>other</key>
+			<string>Member of %1$@, %2$@, and %3$ld additional groups</string>
+		</dict>
+	</dict>
+	<key>THREAD_DETAILS_OTHER_MEMBERS_COUNT_%ld</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>%1$ld other</string>
+			<key>two</key>
+			<string>%1$ld others</string>
+			<key>many</key>
+			<string>%1$ld others</string>
+			<key>other</key>
+			<string>%1$ld others</string>
+		</dict>
+	</dict>
 	<key>USERNAME_SELECTION_TOO_SHORT_ERROR_MESSAGE_%d</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
